--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "^5.0.0",
+    "react-rellax": "^1.0.3",
+    "react-scripts": "^3.0.1",
     "react-spring": "^9.4.2",
     "web-vitals": "^2.1.2"
   },
