--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.1",
     "hamburger-react": "^2.4.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
-    "react-rellax": "^1.0.3",
     "react-scripts": "^5.0.0",
     "react-spring": "^9.4.2",
+    "TagCloud": "^2.2.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
